FIX attempt for jarring scrolling effect on mobile 14

--- a/projects/work 1/Deadspace (2008)/css/deadspace_common.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_common.css
@@ -34,13 +34,13 @@ div.whited {
   background-color: rgb(100, 0, 0);
 }
 main div {
-  height: 90lvh;
+  height: 50lvh;
   align-content: center;
   padding: 0 8vw;
-  background-color: orange;
+  background-color: blue;
 }
 div.half {
-  height: 30vh;
+  height: 30lvh;
   position: relative;
 }
 #next {
@@ -249,7 +249,6 @@ video {
   background-position: center;
   background-size: cover;
   width: 100%;
-  max-height: 100svh;
   margin: 0;
   padding: 0;
 }
