--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -16,16 +16,17 @@ main {
 }
 main div {
   padding: 0 1vw;
-  min-height: 100lvh !important;
+  height: 100svh !important;
   width: 100%;
+}
+div.half {
+  height: 30lvh;
+  position: relative;
 }
 p {
   font-size: 0.9rem;
 }
 .parallax {
-  top: 0px;
-  left: 0px;
-  min-height: 100lvh !important;
   width: 100%;
 }
 .plasma-cutter {
